@@ -46,8 +46,14 @@ namespace libdar
 	gzip = 'z',  ///< gzip compression
 	bzip2 = 'y', ///< bzip2 compression
 	lzo = 'l',   ///< lzo compression
-	xz = 'x'     ///< lzma compression
+	xz = 'x',     ///< lzma compression
+	lzo1x_1_15 = 'j', ///< lzo degraded algo corresponding to lzop -1
+	lzo1x_1 = 'k' ///< lzo degraded algo corresponding to lzo -2 to lzo -6
     };
+	/// \note lzo1x_1_15 and lzo1x_1 should never be found in archive but instead lzo should
+	/// be put in place. In consequence, the two letters 'j' and 'k' reserved here, shall
+	/// well be modified to other value if necessary in the future, thus would not break
+	/// any backward compatibility.
 
 	/// \ingroup Private
 	/// @}
@@ -69,7 +75,7 @@ namespace libdar
             // deleted a destructor time
         ~compressor();
 
-        compression get_algo() const { return current_algo; };
+        compression get_algo() const { return (current_algo == lzo1x_1_15 || current_algo == lzo1x_1) ? lzo : current_algo; };
 
 	void suspend_compression();
 	void resume_compression();
