@@ -12,6 +12,8 @@ from 2.5.9 to 2.5.10
   compared to the lzop program
 - fixed bug: aborting an archive was leading to an unreadable archive in
   direct mode most of the time when strong encryption was used
+- minor new feature: added two flavors of lzo algorithm: lzop-1 and lzop-3
+  in order to match compression levels 1 and 3 of the lzop command
 
 from 2.5.8 to 2.5.9
 - fixed typos in documentation about dar internal use of symmetric
